# lab08

./: .gitignore  CMakeLists.txt  CMakelists.txt  Dockerfile
.github/workflows/: docker.yml  release.yml
demo/: main.cpp
include/: print.h
src/: print.hpp
test/: test_print.cpp
